--- a/omok/style.css
+++ b/omok/style.css
@@ -46,3 +46,15 @@ span {
     width: 100px;
     border-radius: 5px;
 }
+
+.main-board {
+    width: 60%;
+}
+
+.chatting-board {
+    width: 40%;
+    height: 500px;
+    display:flex;
+    flex-direction: column-reverse;
+    overflow-y:auto;
+}
